Add get started page

--- a/another.html
+++ b/another.html
@@ -1,76 +1,65 @@
-<style>
-    .wel {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 40px;
-  padding: 60px 20px;
-  position: relative;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Get Started | eSchool</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f7fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
 
-.wel-left {
-  flex: 1;
-  z-index: 2;
-}
+        .get-started-container {
+            background-color: #fff;
+            padding: 50px 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+            max-width: 500px;
+        }
 
-.wel-right {
-  flex: 1;
-  position: relative;
-}
+        h1 {
+            color: #4a90e2;
+            margin-bottom: 20px;
+            font-size: 2rem;
+        }
 
-.image-wrapper {
-  position: relative;
-  width: 400px;
-  height: 400px;
-  overflow: hidden;
-  border-radius: 50% 50% 0 50%; /* makes a diagonal rounded shape */
-  box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-  transform: rotate(-10deg); /* diagonal tilt */
-}
+        p {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 30px;
+        }
 
-.wel-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.3s;
-}
+        .btn {
+            display: inline-block;
+            padding: 15px 30px;
+            margin: 10px;
+            font-size: 1rem;
+            color: #fff;
+            background-color: #4a90e2;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background-color 0.2s ease;
+        }
 
-.wel-img:hover {
-  transform: scale(1.1) rotate(0deg); /* zoom in and straighten on hover */
-}
-
-/* Mobile responsiveness */
-@media (max-width: 768px) {
-  .wel {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .image-wrapper {
-    width: 80%;
-    height: auto;
-    transform: rotate(0deg);
-    border-radius: 20px;
-    margin-top: 20px;
-  }
-}
-
-
-</style>
-<div class="wel container">
-  <div class="wel-left">
-    <h1 class="welc">Welcome to Eschool</h1>
-    <h2 class="bred">Making quality education accessible to every learner, everywhere.</h2>
-    <p class="welcm">
-      At Eschool we provide high-quality video lessons, concise subject notes, and career resources 
-      that empower students and reward teachers. Our platform is designed to be simple, friendly, 
-      and effective.
-    </p>
-  </div>
-  <div class="wel-right">
-    <div class="image-wrapper">
-      <img src="{{ url_for('static', filename='image.png') }}" class="wel-img">
+        .btn:hover {
+            background-color: #357ab7;
+        }
+    </style>
+</head>
+<body>
+    <div class="get-started-container">
+        <h1>Get Started with eSchool</h1>
+        <p>Create your free account, explore courses, and start learning today!</p>
+        <a href="/signup" class="btn">Sign Up</a>
+        <a href="/courses" class="btn">Browse Courses</a>
     </div>
-  </div>
-</div>
-
+</body>
+</html>
